<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CalculadoraActivity">

    <LinearLayout
        android:id="@+id/lin_Textos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_Valores"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="15"
            android:singleLine="true"
            android:textAlignment="textEnd"
            android:textColor="@color/yellowLight"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/txt_Operador"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:singleLine="true"
            android:textAlignment="center"
            android:textColor="@color/yellowLight"
            android:textSize="30sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/txt_Numeros"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:singleLine="true"
        android:textAlignment="textEnd"
        android:textColor="@color/yellowBurn"
        android:textSize="66sp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TableRow
            android:id="@+id/linL_BotoesE"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/yellowBurn">

            <Button
                android:id="@+id/btn_Clear"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="Especiais"
                android:text="@string/clear"
                android:textColor="@android:color/background_light"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn_ClearAll"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="Especiais"
                android:text="@string/clearAll"
                android:textColor="@android:color/background_light"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn_Backspace"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="Especiais"
                android:text="@string/backspace"
                android:textColor="@android:color/background_light"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn_Divisao"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="Operacoes"
                android:text="@string/op_Divisao"
                android:textColor="@android:color/background_light"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:id="@+id/linL_BotoesD"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/yellowBurn">

            <Button
                android:id="@+id/btn_7"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="Numericos"
                android:text="@string/num_7"
                android:textColor="@android:color/background_light"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn_8"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="Numericos"
                android:text="@string/num_8"
                android:textColor="@android:color/background_light"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn_9"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="Numericos"
                android:text="@string/num_9"
                android:textColor="@android:color/background_light"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn_Multiplicacao"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="Operacoes"
                android:text="@string/op_Multiplicacao"
                android:textColor="@android:color/background_light"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:id="@+id/linL_BotoesC"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/yellowBurn">

            <Button
                android:id="@+id/btn_4"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="Numericos"
                android:text="@string/num_4"
                android:textColor="@android:color/background_light"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn_5"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="Numericos"
                android:text="@string/num_5"
                android:textColor="@android:color/background_light"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn_6"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="Numericos"
                android:text="@string/num_6"
                android:textColor="@android:color/background_light"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn_Subtracao"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="Operacoes"
                android:text="@string/op_Subtracao"
                android:textColor="@android:color/background_light"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:id="@+id/linL_BotoesB"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/yellowBurn">

            <Button
                android:id="@+id/btn_1"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="Numericos"
                android:text="@string/num_1"
                android:textColor="@android:color/background_light"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn_2"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="Numericos"
                android:text="@string/num_2"
                android:textColor="@android:color/background_light"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn_3"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="Numericos"
                android:text="@string/num_3"
                android:textColor="@android:color/background_light"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn_Soma"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="Operacoes"
                android:text="@string/op_Soma"
                android:textColor="@android:color/background_light"
                android:textSize="24sp" />

        </TableRow>

        <TableRow
            android:id="@+id/linL_BotoesA"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/yellowBurn">

            <Button
                android:id="@+id/btn_PositivoNegativo"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="Operacoes"
                android:text="@string/maiorMenor"
                android:textColor="@android:color/background_light"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn_0"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="Numericos"
                android:text="@string/num_0"
                android:textColor="@android:color/background_light"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn_Virgula"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="Especiais"
                android:text="@string/virgula"
                android:textColor="@android:color/background_light"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btn_Igual"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="Operacoes"
                android:text="@string/Igual"
                android:textColor="@android:color/background_light"
                android:textSize="24sp" />

        </TableRow>

    </TableLayout>

</LinearLayout>